Completed phase 1. added error handling in cli, added option to change order date