@@ -8,7 +8,7 @@ import Utils.OrderStatus;
 
 public class OrderFacade {
 
-    private List<OrderDL> orders;
+    private final List<OrderDL> orders;
     private final SupplierFacade sf;
     private int nextID = 0;
 
@@ -19,6 +19,14 @@ public class OrderFacade {
 
     public void createOrder(int supplierID, String destination, int agreementID, Date orderDate, List<int[]> Orders) {
         List<OrderItemDL> items = new ArrayList<>();
+        if(!verifySupplier(supplierID)) {
+            System.out.println("Can't create order, supplier not found");
+            return;
+        }
+        if(!verifyAgreement(supplierID, agreementID)) {
+            System.out.println("Can't create order, agreement not found");
+            return;
+        }
         for (int[] order : Orders) {
             int itemID = order[0];
             int quantity = order[1];
@@ -31,7 +39,7 @@ public class OrderFacade {
         orders.add(newOrder);
     }
 
-    public void changeOrder(int orderID, String destination, int agreementID, List<int[]> newItems)
+    public void changeOrder(int orderID, String destination, Date orderDate, int agreementID, List<int[]> newItems)
             throws IllegalArgumentException {
         try {
             OrderDL order = getOrder(orderID);
@@ -47,6 +55,7 @@ public class OrderFacade {
             order.setOrderItems(items);
             order.setAgreementID(agreementID);
             order.setDestination(destination);
+            order.setOrderDate(orderDate);
         } catch (IllegalArgumentException e) {
             throw new IllegalArgumentException("Order not found: " + orderID);
         }
@@ -56,7 +65,6 @@ public class OrderFacade {
         for (OrderDL order : orders) {
             if (order.getOrderID() == orderID) {
                 order.setOrderStatus(OrderStatus.CANCELLED);
-                ;
                 return;
             }
         }
@@ -82,6 +90,14 @@ public class OrderFacade {
         return orderHistory;
     }
 
+    private boolean verifySupplier(int supplierID){
+        return sf.getSupplier(supplierID) != null;
+    }
+
+    private boolean verifyAgreement(int supplierID, int agreementID){
+        return sf.getAgreement(supplierID, agreementID) != null;
+    }
+
     private double calculateTotalPrice(int quantity, int catalogID, int supplierID, int agreementID) {
         double price = quantity * sf.getAgreement(supplierID, agreementID).getItem(catalogID).getPrice();
         DiscountDL discount = sf.getAgreement(supplierID, agreementID).getDiscount(catalogID);
@@ -102,38 +118,38 @@ public class OrderFacade {
                 new int[] { 1, 120 },
                 new int[] { 2, 160 }));
 
-        createOrder(1, "Branch A", 1, java.sql.Date.valueOf("2025-04-15"), Arrays.asList(
-                new int[] { 1, 50 }));
+        createOrder(1, "Branch A", 1, java.sql.Date.valueOf("2025-04-15"), List.of(
+                new int[]{1, 50}));
 
-        createOrder(1, "Branch B", 1, java.sql.Date.valueOf("2025-04-20"), Arrays.asList(
-                new int[] { 2, 90 }));
+        createOrder(1, "Branch B", 1, java.sql.Date.valueOf("2025-04-20"), List.of(
+                new int[]{2, 90}));
 
-        createOrder(1, "Branch C", 1, java.sql.Date.valueOf("2025-04-22"), Arrays.asList(
-                new int[] { 2, 80 }));
+        createOrder(1, "Branch C", 1, java.sql.Date.valueOf("2025-04-22"), List.of(
+                new int[]{2, 80}));
 
-        createOrder(2, "Central Warehouse", 1, java.sql.Date.valueOf("2025-04-11"), Arrays.asList(
-                new int[] { 6, 220 }));
+        createOrder(2, "Central Warehouse", 1, java.sql.Date.valueOf("2025-04-11"), List.of(
+                new int[]{6, 220}));
 
-        createOrder(2, "Branch A", 1, java.sql.Date.valueOf("2025-04-16"), Arrays.asList(
-                new int[] { 6, 100 }));
+        createOrder(2, "Branch A", 1, java.sql.Date.valueOf("2025-04-16"), List.of(
+                new int[]{6, 100}));
 
-        createOrder(2, "Branch B", 1, java.sql.Date.valueOf("2025-04-18"), Arrays.asList(
-                new int[] { 6, 80 }));
+        createOrder(2, "Branch B", 1, java.sql.Date.valueOf("2025-04-18"), List.of(
+                new int[]{6, 80}));
 
-        createOrder(2, "Branch C", 1, java.sql.Date.valueOf("2025-04-21"), Arrays.asList(
-                new int[] { 6, 90 }));
+        createOrder(2, "Branch C", 1, java.sql.Date.valueOf("2025-04-21"), List.of(
+                new int[]{6, 90}));
 
-        createOrder(3, "Central Warehouse", 1, java.sql.Date.valueOf("2025-04-12"), Arrays.asList(
-                new int[] { 7, 150 }));
+        createOrder(3, "Central Warehouse", 1, java.sql.Date.valueOf("2025-04-12"), List.of(
+                new int[]{7, 150}));
 
-        createOrder(3, "Branch A", 2, java.sql.Date.valueOf("2025-04-14"), Arrays.asList(
-                new int[] { 10, 100 }));
+        createOrder(3, "Branch A", 2, java.sql.Date.valueOf("2025-04-14"), List.of(
+                new int[]{10, 100}));
 
-        createOrder(3, "Branch B", 2, java.sql.Date.valueOf("2025-04-17"), Arrays.asList(
-                new int[] { 10, 120 }));
+        createOrder(3, "Branch B", 2, java.sql.Date.valueOf("2025-04-17"), List.of(
+                new int[]{10, 120}));
 
-        createOrder(3, "Branch C", 1, java.sql.Date.valueOf("2025-04-23"), Arrays.asList(
-                new int[] { 7, 100 }));
+        createOrder(3, "Branch C", 1, java.sql.Date.valueOf("2025-04-23"), List.of(
+                new int[]{7, 100}));
 
     }
 }
